Minor tweak to fix the dropdown arrow on small screens

--- a/docs/frontend/css/site.css
+++ b/docs/frontend/css/site.css
@@ -9,4 +9,6 @@
 
 .topcallout select {
     margin: 0 0 0 0;
+    padding-left: 0.5rem;
+    padding-right: 1.5rem;
 }
